fabric/testdata/out/ing_brownie-get-health-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/health\") \u0026\u0026 Method(\"GET\") \u0026\u0026 Header(\"X-Forwarded-Proto\",
      \"https\")"},"labels":{"controller-uid":"fe8288b6-d1fc-11e8-90e2-0618dc6898fa","deployment-id":"d-25iwoeb4s9dydgtj9xoiwy97je","pipeline-id":"l-s9vh4tc13wsng4p9j2ic9imwz"},"name":"brownie-get-health-all","namespace":"default"},"spec":{"rules":[{"host":"brownie.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"brownie","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-logistics-data-test.zalandoapis.com","http":{"paths":[{"backend":{"s [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(3) && Path("/health") && Method("GET") &&
      Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-06-17T13:46:49Z"
  generation: 1
  labels:
    controller-uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
    deployment-id: d-25iwoeb4s9dydgtj9xoiwy97je
    pipeline-id: l-s9vh4tc13wsng4p9j2ic9imwz
  name: brownie-get-health-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: brownie
    uid: fe8288b6-d1fc-11e8-90e2-0618dc6898fa
  resourceVersion: "1370356623"
  uid: 5b1b5148-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: brownie.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-logistics-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: brownie
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
